--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,19 @@
         <title>Meira Pentermann</title>
     </head>
     <body>
-        <h1>Meira Pentermann</h1>
-        <p>Coffee galão siphon a fair trade strong. Americano mocha, ristretto latte french press, arabica strong roast cultivar crema doppio café au lait et milk acerbic mug that brewed plunger pot black french press froth café au lait aroma. Crema doppio, roast organic, beans id et fair trade flavour cultivar eu blue mountain extraction. Organic latte café au lait single origin breve blue mountain aftertaste seasonal crema to go in latte, froth turkish aftertaste breve saucer mocha. Steamed, percolator, black froth cultivar dripper cinnamon et mocha, at caramelization, that grounds, trifecta latte, steamed rich con panna french press and espresso affogato sweet. Brewed con panna froth crema, doppio organic milk, white cappuccino dark, kopi-luwak extraction, filter, robusta iced extra bar galão rich mocha ristretto.</p>
+        <header>
+            <h1>Meira Pentermann</h1>
+            <h3>Java Developer</h3>
+        </header>
+        <main>
+            <p>Coffee galão siphon a fair trade strong. Americano mocha, ristretto latte french press, arabica strong roast cultivar crema doppio café au lait et milk acerbic mug that brewed plunger pot black french press froth café au lait aroma. Crema doppio, roast organic, beans id et fair trade flavour cultivar eu blue mountain extraction. Organic latte café au lait single origin breve blue mountain aftertaste seasonal crema to go in latte, froth turkish aftertaste breve saucer mocha. Steamed, percolator, black froth cultivar dripper cinnamon et mocha, at caramelization, that grounds, trifecta latte, steamed rich con panna french press and espresso affogato sweet. Brewed con panna froth crema, doppio organic milk, white cappuccino dark, kopi-luwak extraction, filter, robusta iced extra bar galão rich mocha ristretto.</p>
+        </main>
+        <footer>
+            <p>
+                Pumpkin spice organic mocha, wings est aromatic doppio coffee mazagran extraction. Robusta roast, dripper flavour single origin, strong eu so sweet cappuccino fair trade irish. Cultivar frappuccino, froth arabica cortado frappuccino americano. Robust, caffeine chicory, grounds, cup caramelization skinny at whipped white macchiato chicory.
+            </p>
+        </footer>
+
 
 
     </body>
