changes from last week

--- a/html/contact.html
+++ b/html/contact.html
@@ -7,23 +7,37 @@
     </head>
     <body>
         <header>
-            <h1>Meira Pentermann</h1>
-            <h3>Contact</h3>
+            <h1 class="myName">Meira Pentermann</h1>
+            <h3 class="keyword">Contact</h3>
+            <div id="navbar">
+                <ul>
+                    <li class="colorButton"><a href="index.html">Home</a></li>
+                    <li class="colorButton"><a href="about.html">About</a></li>
+                    <li class="colorButton"><a href="resume.html">Resume</a></li>
+                    <li class="colorButton"><a href="labs.html">Labs</a></li>
+                    <li class="colorButton"><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </header>
-        <div id="navbar">
-            <ul>
-                <li class="colorButton"><a href="index.html">Home</a></li>
-                <li class="colorButton"><a href="about.html">About</a></li>
-                <li class="colorButton"><a href="resume.html">Resume</a></li>
-                <li class="colorButton"><a href="labs.html">Labs</a></li>
-                <li class="colorButton"><a href="contact.html">Contact</a></li>
-            </ul>
+        <div id="hidden_header">
+            <h1 class="myName">Meira Pentermann</h1>
+            <h3 class="keyword">Java Developer</h3>
+            <div id="navbar">
+                <ul>
+                    <li class="colorButton"><a href="index.html">Home</a></li>
+                    <li class="colorButton"><a href="about.html">About</a></li>
+                    <li class="colorButton"><a href="resume.html">Resume</a></li>
+                    <li class="colorButton"><a href="labs.html">Labs</a></li>
+                    <li class="colorButton"><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </div>
         <main>
-            <p></p>
+            <h4>Contact: Meira @ MeiraPentermann DOT com.</h4>
         </main>
         <footer>
             <p>
+                Pumpkin spice organic mocha, wings est aromatic doppio coffee mazagran extraction. Robusta roast, dripper flavour single origin, strong eu so sweet cappuccino fair trade irish. Cultivar frappuccino, froth arabica cortado frappuccino americano. Robust, caffeine chicory, grounds, cup caramelization skinny at whipped white macchiato chicory.
             </p>
         </footer>
     </body>
