--- a/html/labs.html
+++ b/html/labs.html
@@ -7,23 +7,63 @@
     </head>
     <body>
         <header>
-            <h1>Meira Pentermann</h1>
-            <h3>Labs</h3>
+            <h1 class="myName">Meira Pentermann</h1>
+            <h3 class="keyword">Labs</h3>
+            <div id="navbar">
+                <ul>
+                    <li class="colorButton"><a href="index.html">Home</a></li>
+                    <li class="colorButton"><a href="about.html">About</a></li>
+                    <li class="colorButton"><a href="resume.html">Resume</a></li>
+                    <li class="colorButton"><a href="labs.html">Labs</a></li>
+                    <li class="colorButton"><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </header>
-        <div id="navbar">
-            <ul>
-                <li class="colorButton"><a href="index.html">Home</a></li>
-                <li class="colorButton"><a href="about.html">About</a></li>
-                <li class="colorButton"><a href="resume.html">Resume</a></li>
-                <li class="colorButton"><a href="labs.html">Labs</a></li>
-                <li class="colorButton"><a href="contact.html">Contact</a></li>
-            </ul>
+        <div id="hidden_header">
+            <h1 class="myName">Meira Pentermann</h1>
+            <h3 class="keyword">Java Developer</h3>
+            <div id="navbar">
+                <ul>
+                    <li class="colorButton"><a href="index.html">Home</a></li>
+                    <li class="colorButton"><a href="about.html">About</a></li>
+                    <li class="colorButton"><a href="resume.html">Resume</a></li>
+                    <li class="colorButton"><a href="labs.html">Labs</a></li>
+                    <li class="colorButton"><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </div>
         <main>
-            <p></p>
+            <table id="labs">
+                <tr>
+                    <th>Project Name</th>
+                    <th>GitHub Repo</th>
+                    <th>App Link</th>
+                </tr>
+                <tr>
+                    <td>Blackjack</td>
+                    <td><a href="https://github.com/Meira1427/BlackjackProject" target="_blank">Blackjack on GitHub</a></td>
+                    <td>No App</td>
+                </tr>
+                <tr>
+                    <td>Jets</td>
+                    <td><a href="https://github.com/Meira1427/JetsProject" target="_blank">Jets on GitHub</a></td>
+                    <td>No App</td>
+                </tr>
+                <tr>
+                    <td>US Presidents</td>
+                    <td><a href="https://github.com/Meira1427/PresidentsProject" target="_blank">Presidents on GitHub</a></td>
+                    <td><a href="http://18.220.194.202:8080/MyPresidents/" target="_blank">Presidents Projects</a></td>
+                </tr>
+                <tr>
+                    <td>Hello Java Web</td>
+                    <td>Not on GitHub</td>
+                    <td><a href="http://18.220.194.202:8080/HelloJavaWeb/" target="_blank">Hello Java Web</a></td>
+                </tr>
+            </table>
         </main>
         <footer>
             <p>
+                Pumpkin spice organic mocha, wings est aromatic doppio coffee mazagran extraction. Robusta roast, dripper flavour single origin, strong eu so sweet cappuccino fair trade irish. Cultivar frappuccino, froth arabica cortado frappuccino americano. Robust, caffeine chicory, grounds, cup caramelization skinny at whipped white macchiato chicory.
             </p>
         </footer>
     </body>
