--- a/html/resume.html
+++ b/html/resume.html
@@ -7,24 +7,213 @@
     </head>
     <body>
         <header>
-            <h1>Meira Pentermann</h1>
-            <h3>Resume</h3>
+            <h1 class="myName">Meira Pentermann</h1>
+            <h3 class="keyword">Resume</h3>
+            <div id="navbar">
+                <ul>
+                    <li class="colorButton"><a href="index.html">Home</a></li>
+                    <li class="colorButton"><a href="about.html">About</a></li>
+                    <li class="colorButton"><a href="resume.html">Resume</a></li>
+                    <li class="colorButton"><a href="labs.html">Labs</a></li>
+                    <li class="colorButton"><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </header>
-        <div id="navbar">
-            <ul>
-                <li class="colorButton"><a href="index.html">Home</a></li>
-                <li class="colorButton"><a href="about.html">About</a></li>
-                <li class="colorButton"><a href="resume.html">Resume</a></li>
-                <li class="colorButton"><a href="labs.html">Labs</a></li>
-                <li class="colorButton"><a href="contact.html">Contact</a></li>
-            </ul>
+        <div id="hidden_header">
+            <h1 class="myName">Meira Pentermann</h1>
+            <h3 class="keyword">Java Developer</h3>
+            <div id="navbar">
+                <ul>
+                    <li class="colorButton"><a href="index.html">Home</a></li>
+                    <li class="colorButton"><a href="about.html">About</a></li>
+                    <li class="colorButton"><a href="resume.html">Resume</a></li>
+                    <li class="colorButton"><a href="labs.html">Labs</a></li>
+                    <li class="colorButton"><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </div>
         <main>
-            <p></p>
-        </main>
-        <footer>
-            <p>
-            </p>
-        </footer>
+        <table id="resume">
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th rowspan="4">Summary</th>
+                <th></th>
+                <th></th>
+                <th></th>
+            <tr>
+                <td colspan="3">Over twenty-five years in small business environment with experience in</td>
+            </tr>
+            <tr>
+                <td colspan="3">accounting, administration, and records management. Trained at Skill</td>
+            </tr>
+            <tr>
+                <td colspan="3">Distillery in software development. Meticulous, versatile, and independent.</td>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th rowspan="7">Skills</th>
+                <th></th>
+                <th></th>
+                <th></th>
+            <tr>
+                <td colspan="3">Java 8, OOP, 91% on Oracle OCP-1 (formally OCA)</td>
+            </tr>
+            <tr>
+                <td colspan="3">Java Web Apps, Spring, Maven, Gradle</td>
+            </tr>
+            <tr>
+                <td colspan="3">HTML, CSS, Some Photoshop</td>
+            </tr>
+            <tr>
+                <td colspan="3">Word, Excel, including Pivot Tables</td>
+            </tr>
+            <tr>
+                <td colspan="3">PDF editing with Acrobat Reader DC</td>
+            </tr>
+            <tr>
+                <td colspan="3">Skill 6</td>
+            </tr>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th rowspan="13">Bell ATM Service, Inc.</th>
+                <th colspan="3">1999-2017</th>
+            </tr>
+            <tr>
+                <th colspan="3">Controller/Human Resources </th>
+            </tr>
+            <tr>
+                <td colspan="3">Assisted in the development of an electronic parts repair and distribution </td>
+            </tr>
+            <tr>
+                <td colspan="3">company from two employees to thirty.</td>
+            </tr>
+            <tr>
+                <td colspan="3"></td>
+            </tr>
+            <tr>
+                <td colspan="3"></td>
+            </tr>
+            <tr>
+                <td colspan="3">Bookkeeping - A/R, A/P, sales tax, ACH, accrual accounts, tax prep</td>
+            </tr>
+            <tr>
+                <td colspan="3">HR - payroll, workman’s comp audits, benefits, payroll deductions</td>
+            </tr>
+            <tr>
+                <td colspan="3">Records Management – e-filing, development of filing systems</td>
+            </tr>
+            <tr>
+                <td colspan="3">Extensive experience with Microsoft Office, Quickbooks, Acctivate</td>
+            </tr>
+            <tr>
+                <td colspan="3">Internet research projects, prompt and courteous email processing</td>
+            </tr>
+            <tr>
+                <td colspan="3">Business card design, Power Point presentations, marketing tools</td>
+            </tr>
+            <tr>
+                <td colspan="3">Some Adobe Photoshop experience and PDF editing in Acrobat Reader DC</td>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th rowspan="12">Collen Management</th>
+                <th colspan="3">1994-1998</th>
+            </tr>
+            <tr>
+                <th colspan="3">Bookkeeper/Executive Assistant </th>
+            </tr>
+            <tr>
+                <td colspan="3">Responsible for all aspects of administration in an entrepreneurial company</td>
+            </tr>
+            <tr>
+                <td colspan="3">that was involved in projects on several venues, including real estate and oil.</td>
+            </tr>
+            <tr>
+                <td colspan="3"></td>
+            </tr>
+            <tr>
+                <td colspan="3"></td>
+            </tr>
+            <tr>
+                <td colspan="3">Bookkeeping - A/R, A/P, bank reconciliation, credit card reconciliation</td>
+            </tr>
+            <tr>
+                <td colspan="3">Developing, polishing, and distributing sales materials</td>
+            </tr>
+            <tr>
+                <td colspan="3">Incoming telephone calls, outgoing sales calls, and travel arrangements</td>
+            </tr>
+            <tr>
+                <td colspan="3">Attending county court petition proceedings</td>
+            </tr>
+            <tr>
+                <td colspan="3">Researching mining rights through county records</td>
+            </tr>
+            <tr>
+                <td colspan="3">Extensive experience with Word, Excel, Quickbooks, Quicken</td>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+        </table>
+    </main>
+    <footer>
+        <p>
+        </p>
+    </footer>
     </body>
 </html>
