changes to labs resume and about

--- a/html/resume.html
+++ b/html/resume.html
@@ -73,7 +73,7 @@
                 <th colspan="4"></th>
             </tr>
             <tr>
-                <th rowspan="7">Skills</th>
+                <th rowspan="6">Skills</th>
                 <th></th>
                 <th></th>
                 <th></th>
@@ -91,10 +91,6 @@
             </tr>
             <tr>
                 <td colspan="3">PDF editing with Acrobat Reader DC</td>
-            </tr>
-            <tr>
-                <td colspan="3">Skill 6</td>
-            </tr>
             </tr>
             <tr>
                 <th colspan="4"></th>
@@ -196,6 +192,54 @@
             </tr>
             <tr>
                 <td colspan="3">Extensive experience with Word, Excel, Quickbooks, Quicken</td>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th rowspan="4">Innovative Software</th>
+                <th colspan="3">1989-1994</th>
+            </tr>
+            <tr>
+                <th colspan="3">Bookkeeping/Administration/Sales </th>
+            </tr>
+            <tr>
+                <td colspan="3">Responsible for all aspects of administration in a software startup.</td>
+            </tr>
+            <tr>
+                <td colspan="3">They closed doors in the late nineties, after my time.</td>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th rowspan="3">Education</th>
+                <th></th>
+                <th></th>
+                <th></th>
+            <tr>
+                <td colspan="3">University of Washington, B.S. in Physics, 3.8 gpa</td>
+            </tr>
+            <tr>
+                <td colspan="3">Skill Distillery, Coding Bootcamp, 2017</td>
             </tr>
             <tr>
                 <th colspan="4"></th>
