--- a/html/labs.html
+++ b/html/labs.html
@@ -40,6 +40,16 @@
                     <th>App Link</th>
                 </tr>
                 <tr>
+                    <td>MVC Crud</td>
+                    <td><a href="https://github.com/Meira1427/MVCCRUDProject" target="_blank">Task List on GitHub</a></td>
+                    <td><a href="http://18.220.194.202" target="_blank">Task List</a></td>
+                </tr>
+                <tr>
+                    <td>US Presidents</td>
+                    <td><a href="https://github.com/Meira1427/PresidentsProject" target="_blank">Presidents on GitHub</a></td>
+                    <td><a href="http://18.220.194.202:8080/MyPresidents/" target="_blank">Presidents Projects</a></td>
+                </tr>
+                <tr>
                     <td>Blackjack</td>
                     <td><a href="https://github.com/Meira1427/BlackjackProject" target="_blank">Blackjack on GitHub</a></td>
                     <td>No App</td>
@@ -50,11 +60,6 @@
                     <td>No App</td>
                 </tr>
                 <tr>
-                    <td>US Presidents</td>
-                    <td><a href="https://github.com/Meira1427/PresidentsProject" target="_blank">Presidents on GitHub</a></td>
-                    <td><a href="http://18.220.194.202:8080/MyPresidents/" target="_blank">Presidents Projects</a></td>
-                </tr>
-                <tr>
                     <td>Hello Java Web</td>
                     <td>Not on GitHub</td>
                     <td><a href="http://18.220.194.202:8080/HelloJavaWeb/" target="_blank">Hello Java Web</a></td>
@@ -63,7 +68,6 @@
         </main>
         <footer>
             <p>
-                Pumpkin spice organic mocha, wings est aromatic doppio coffee mazagran extraction. Robusta roast, dripper flavour single origin, strong eu so sweet cappuccino fair trade irish. Cultivar frappuccino, froth arabica cortado frappuccino americano. Robust, caffeine chicory, grounds, cup caramelization skinny at whipped white macchiato chicory.
             </p>
         </footer>
     </body>
