--- a/html/labs.html
+++ b/html/labs.html
@@ -10,26 +10,22 @@
             <h1 class="myName">Meira Pentermann</h1>
             <h3 class="keyword">Labs</h3>
             <div id="navbar">
-                <ul>
-                    <li class="colorButton"><a href="index.html">Home</a></li>
-                    <li class="colorButton"><a href="about.html">About</a></li>
-                    <li class="colorButton"><a href="resume.html">Resume</a></li>
-                    <li class="colorButton"><a href="labs.html">Labs</a></li>
-                    <li class="colorButton"><a href="contact.html">Contact</a></li>
-                </ul>
+                    <a href="index.html" class="colorButton"><input type="submit" value="Home"</input></a>
+                    <a href="about.html" class="colorButton"><input type="submit" value="About"</input></a>
+                    <a href="resume.html" class="colorButton"><input type="submit" value="Resume"</input></a>
+                    <a href="labs.html" class="colorButton"><input type="submit" value="Labs"</input></a>
+                    <a href="contact.html" class="colorButton"><input type="submit" value="Contact"</input></a>
             </div>
         </header>
         <div id="hidden_header">
             <h1 class="myName">Meira Pentermann</h1>
             <h3 class="keyword">Java Developer</h3>
             <div id="navbar">
-                <ul>
-                    <li class="colorButton"><a href="index.html">Home</a></li>
-                    <li class="colorButton"><a href="about.html">About</a></li>
-                    <li class="colorButton"><a href="resume.html">Resume</a></li>
-                    <li class="colorButton"><a href="labs.html">Labs</a></li>
-                    <li class="colorButton"><a href="contact.html">Contact</a></li>
-                </ul>
+                    <a href="index.html" class="colorButton"><input type="submit" value="Home"</input></a>
+                    <a href="about.html" class="colorButton"><input type="submit" value="About"</input></a>
+                    <a href="resume.html" class="colorButton"><input type="submit" value="Resume"</input></a>
+                    <a href="labs.html" class="colorButton"><input type="submit" value="Labs"</input></a>
+                    <a href="contact.html" class="colorButton"><input type="submit" value="Contact"</input></a>
             </div>
         </div>
         <main>
@@ -42,7 +38,7 @@
                 <tr>
                     <td>MVC Crud</td>
                     <td><a href="https://github.com/Meira1427/MVCCRUDProject" target="_blank">Task List on GitHub</a></td>
-                    <td><a href="http://18.220.194.202" target="_blank">Task List</a></td>
+                    <td><a href="http://18.220.194.202:8080/MVCCRUDProject/" target="_blank">Task List</a></td>
                 </tr>
                 <tr>
                     <td>US Presidents</td>
