mistake in navbar

--- a/html/contact.html
+++ b/html/contact.html
@@ -10,22 +10,22 @@
             <h1 class="myName">Meira Pentermann</h1>
             <h3 class="keyword">Contact</h3>
             <div id="navbar">
-                    <a href="index.html" class="colorButton"><input type="submit" value="Home"</input></a>
-                    <a href="about.html" class="colorButton"><input type="submit" value="About"</input></a>
-                    <a href="resume.html" class="colorButton"><input type="submit" value="Resume"</input></a>
-                    <a href="labs.html" class="colorButton"><input type="submit" value="Labs"</input></a>
-                    <a href="contact.html" class="colorButton"><input type="submit" value="Contact"</input></a>
+                    <a href="index.html" class="colorButton"><input type="submit" value="Home"></input></a>
+                    <a href="about.html" class="colorButton"><input type="submit" value="About"></input></a>
+                    <a href="resume.html" class="colorButton"><input type="submit" value="Resume"></input></a>
+                    <a href="labs.html" class="colorButton"><input type="submit" value="Labs"></input></a>
+                    <a href="contact.html" class="colorButton"><input type="submit" value="Contact"></input></a>
             </div>
         </header>
         <div id="hidden_header">
             <h1 class="myName">Meira Pentermann</h1>
             <h3 class="keyword">Java Developer</h3>
             <div id="navbar">
-                    <a href="index.html" class="colorButton"><input type="submit" value="Home"</input></a>
-                    <a href="about.html" class="colorButton"><input type="submit" value="About"</input></a>
-                    <a href="resume.html" class="colorButton"><input type="submit" value="Resume"</input></a>
-                    <a href="labs.html" class="colorButton"><input type="submit" value="Labs"</input></a>
-                    <a href="contact.html" class="colorButton"><input type="submit" value="Contact"</input></a>
+                    <a href="index.html" class="colorButton"><input type="submit" value="Home"></input></a>
+                    <a href="about.html" class="colorButton"><input type="submit" value="About"></input></a>
+                    <a href="resume.html" class="colorButton"><input type="submit" value="Resume"></input></a>
+                    <a href="labs.html" class="colorButton"><input type="submit" value="Labs"></input></a>
+                    <a href="contact.html" class="colorButton"><input type="submit" value="Contact"></input></a>
             </div>
         </div>
         <main>
