add blackjack to labs page

--- a/html/labs.html
+++ b/html/labs.html
@@ -37,6 +37,11 @@
                 </tr>
                 <tr>
                     <td>MVC Crud</td>
+                    <td><a href="https://github.com/Meira1427/BlackjackWebApp.git" target="_blank">Blackjack Web App on GitHub</a></td>
+                    <td><a href="http://18.220.194.202:8080/BlackjackGradleApp/" target="_blank">Task List</a></td>
+                </tr>
+                <tr>
+                    <td>MVC Crud</td>
                     <td><a href="https://github.com/Meira1427/MVCCRUDProject" target="_blank">Task List on GitHub</a></td>
                     <td><a href="http://18.220.194.202:8080/MVCCRUDProject/" target="_blank">Task List</a></td>
                 </tr>
