updating personal site

--- a/html/about.html
+++ b/html/about.html
@@ -33,7 +33,12 @@
             <p>"If I was going to spend time and money on a bootcamp, I wanted to get accepted by the most selective one I could, so I researched the possibilties. But I discovered that most of the other bootcamps focused on Ruby on Rails or Javascript, and I really wanted to learn Java. As it turns out, 670 people applied for my Skill Distillery cohort, and only 15 of us were accepted. So, in the end, I believe I did get into the most selective bootcamp. I feel very blessed to have been a student at Skill Distillery. It was fun and challenging, and the program was very comprehensive."</p>
             <p>Meira enjoys troubleshooting puzzles both on her own and in a small group setting. She loves the problem-solving and creativite process involved in programming. In the corporate environment, she has proven to be a determined, meticulous, and reliable employee.</p>
             <p>"Having worked in human resources, I know that employees can be rewarding and capable, but on occasion, they create a lot of drama," Meira said. "I've been around long enough to have become self-aware and resolved most of my issues. I just want to be a part of a creative project, do a good job, and be one of those reliable employees."</p>
+            <h6><a href="swot.html">SWOT on employing Meira</a></h6>
+            <!-- <h6><a href="images/MeiraCultureIndex.PNG" target="_blank">Culture Index Profile</a></h6> -->
         </main>
+        <div id="fish">
+            <img src="fish.png" height="50" alt="fish">
+        </div>
         <footer>
             <p>
             </p>
