--- a/html/labs.html
+++ b/html/labs.html
@@ -36,9 +36,14 @@
                     <th>App Link</th>
                 </tr>
                 <tr>
-                    <td>MVC Crud</td>
+                    <td>Midterm - Family Slack</td>
+                    <td><a href="https://github.com/jmeaster1/Flak" target="_blank">Flak Project on Github</td>
+                    <td><a href="http://18.220.194.202:8080/Flak" target="_blank">Flak Project</a></td>
+                </tr>
+                <tr>
+                    <td>Blackjack Gradle</td>
                     <td><a href="https://github.com/Meira1427/BlackjackWebApp.git" target="_blank">Blackjack Web App on GitHub</a></td>
-                    <td><a href="http://18.220.194.202:8080/BlackjackGradleApp/" target="_blank">Task List</a></td>
+                    <td><a href="http://18.220.194.202:8080/BlackjackGradleApp/" target="_blank">Blackjack Web App</a></td>
                 </tr>
                 <tr>
                     <td>MVC Crud</td>
@@ -51,6 +56,11 @@
                     <td><a href="http://18.220.194.202:8080/MyPresidents/" target="_blank">Presidents Projects</a></td>
                 </tr>
                 <tr>
+                    <td>Javascript Monsters</td>
+                    <td><a href="jsracer.js" target="_blank">js file</a></td>
+                    <td><a href="jsracer.html" target="_blank">JS Racer</a></td>
+                </tr>
+                <tr>
                     <td>Blackjack</td>
                     <td><a href="https://github.com/Meira1427/BlackjackProject" target="_blank">Blackjack on GitHub</a></td>
                     <td>No App</td>
@@ -59,11 +69,6 @@
                     <td>Jets</td>
                     <td><a href="https://github.com/Meira1427/JetsProject" target="_blank">Jets on GitHub</a></td>
                     <td>No App</td>
-                </tr>
-                <tr>
-                    <td>Hello Java Web</td>
-                    <td>Not on GitHub</td>
-                    <td><a href="http://18.220.194.202:8080/HelloJavaWeb/" target="_blank">Hello Java Web</a></td>
                 </tr>
             </table>
         </main>
