--- a/html/resume.html
+++ b/html/resume.html
@@ -69,7 +69,7 @@
                 <th colspan="4"></th>
             </tr>
             <tr>
-                <th rowspan="6">Skills</th>
+                <th rowspan="11">Skills</th>
                 <th></th>
                 <th></th>
                 <th></th>
@@ -77,13 +77,28 @@
                 <td colspan="3">Java 8, OOP, 91% on Oracle OCP-1 (formally OCA)</td>
             </tr>
             <tr>
-                <td colspan="3">Java Web Apps, Spring, Maven, Gradle</td>
+                <td colspan="3">Java Web Apps, Spring MVC, Maven, Gradle, REST, Servlets</td>
             </tr>
             <tr>
-                <td colspan="3">HTML, CSS, Some Photoshop</td>
+                <td colspan="3">Introduced to Agile methodologies, Scrum framework, Kanban principles</td>
             </tr>
             <tr>
-                <td colspan="3">Word, Excel, including Pivot Tables</td>
+                <td colspan="3">SQL using mySQL, JPQL, JDBC, Database design</td>
+            </tr>
+            <tr>
+                <td colspan="3">HTML, CSS, XML, EL, JSP, Javascript, JQuery, Some Photoshop</td>
+            </tr>
+            <tr>
+                <td colspan="3">MS Windows, Mac OS, Linux command line</td>
+            </tr>
+            <tr>
+                <td colspan="3">Apache Tomcat, Amazon AWS</td>
+            </tr>
+            <tr>
+                <td colspan="3">Git version control, GitHub</td>
+            </tr>
+            <tr>
+                <td colspan="3">Word, Powerpoint, Excel, including Pivot Tables</td>
             </tr>
             <tr>
                 <td colspan="3">PDF editing with Acrobat Reader DC</td>
@@ -202,7 +217,7 @@
                 <th colspan="4"></th>
             </tr>
             <tr>
-                <th rowspan="4">Innovative Software</th>
+                <th rowspan="3">Innovative Software</th>
                 <th colspan="3">1989-1994</th>
             </tr>
             <tr>
@@ -212,9 +227,6 @@
                 <td colspan="3">Responsible for all aspects of administration in a software startup.</td>
             </tr>
             <tr>
-                <td colspan="3">They closed doors in the late nineties, after my time.</td>
-            </tr>
-            <tr>
                 <th colspan="4"></th>
             </tr>
             <tr>
@@ -227,7 +239,7 @@
                 <th colspan="4"></th>
             </tr>
             <tr>
-                <th rowspan="3">Education</th>
+                <th rowspan="4">Education</th>
                 <th></th>
                 <th></th>
                 <th></th>
@@ -235,7 +247,28 @@
                 <td colspan="3">University of Washington, B.S. in Physics, 3.8 gpa</td>
             </tr>
             <tr>
-                <td colspan="3">Skill Distillery, Coding Bootcamp, 2017</td>
+                <td colspan="3">Skill Distillery, Coding Bootcamp (800 hour immersive), 2017</td>
+            </tr>
+            <tr>
+                <td colspan="3">edX Python Class - <a href="https://s3.amazonaws.com/verify.edx.org/downloads/ec45f76a4f704e6c81655d840f3e20f2/Certificate.pdf" target="_blank">MIT's 6.00.1x</a></td>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <th colspan="4"></th>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><a href="Meira_Pentermann Resume_2017.pdf" target="_blank">PDF of Resume</a></td>
             </tr>
             <tr>
                 <th colspan="4"></th>
