--- a/html/swot.html
+++ b/html/swot.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <h1 class="myName">Meira Pentermann</h1>
-            <h3 class="keyword">Software Developer</h3>
+            <h3 class="keyword">SWOT</h3>
             <div id="navbar">
                     <a href="index.html" class="colorButton"><input type="submit" value="Home"></input></a>
                     <a href="about.html" class="colorButton"><input type="submit" value="About"></input></a>
@@ -19,7 +19,7 @@
         </header>
         <div id="hidden_header">
             <h1 class="myName">Meira Pentermann</h1>
-            <h3 class="keyword">Software Developer</h3>
+            <h3 class="keyword">Java Developer</h3>
             <div id="navbar">
                     <a href="index.html" class="colorButton"><input type="submit" value="Home"></input></a>
                     <a href="about.html" class="colorButton"><input type="submit" value="About"></input></a>
@@ -29,14 +29,54 @@
             </div>
         </div>
         <main>
-            <h3>Welcome!</h3>
+            <h4>SWOT on Employing Meira</h4>
+            <table id="swot">
+                <tr>
+                    <th>Strengths</th>
+                    <th>Weaknesses</th>
+                </tr>
+                <tr>
+                    <td>
+                        <ul>
+                            <li>picks up new ideas very quickly</li>
+                            <li>800 hour immersive in programming</li>
+                            <li>25 years experience in corporate world</li>
+                            <li>positive outlook and supportive of others</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>lack of experience</li>
+                            <li>new to tech industry</li>
+                        </ul>
+                    </td>
+                </tr>
+            <tr>
+                    <th></th>
+                    <th></th>
+            </tr>
+            <tr>
+                <th>Opportunities</th>
+                <th>Threats</th>
+            </tr>
+            <tr>
+                <td>
+                    <ul>
+                        <li>stable employee, reduce hr issues</li>
+                        <li>not a job hopper, reduce recruiting costs</li>
+                        <li>diversity in education, gender, age</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>may be oldest member of team</li>
+                    </ul>
+                </td>
+            </tr>
+            </table>
         </main>
-        <div>
-            <a href ="https://www.youracclaim.com/badges/1f9ace68-a84a-450b-98d1-35f001ea2187/public_url" id="acclaim"  target="_blank"><img src="https://acclaim-production-app.s3.amazonaws.com/images/86629924-6c10-442c-8742-05ff5e45e922/Oracle-Certification-badge_OC-Associate.png" alt="Oracle OCP" width="100" height="100"></a>
-        </div>
         <footer>
             <p>
-                Pumpkin spice organic mocha, wings est aromatic doppio coffee mazagran extraction. Robusta roast, dripper flavour single origin, strong eu so sweet cappuccino fair trade irish. Cultivar frappuccino, froth arabica cortado frappuccino americano. Robust, caffeine chicory, grounds, cup caramelization skinny at whipped white macchiato chicory.
             </p>
         </footer>
     </body>
