added petsitter to website

--- a/html/labs.html
+++ b/html/labs.html
@@ -41,6 +41,11 @@
                     <td><a href="http://18.220.194.202:8080/Flak" target="_blank">Flak Project</a></td>
                 </tr>
                 <tr>
+                    <td>Ajax Petsit</td>
+                    <td><a href="https://github.com/Meira1427/PetSit" target="_blank">Petsitter on Github</td>
+                    <td><a href="http://18.220.194.202:8080/PetRest" target="_blank">Petsitter Rest</a></td>
+                </tr>
+                <tr>
                     <td>Blackjack Gradle</td>
                     <td><a href="https://github.com/Meira1427/BlackjackWebApp.git" target="_blank">Blackjack Web App on GitHub</a></td>
                     <td><a href="http://18.220.194.202:8080/BlackjackGradleApp/" target="_blank">Blackjack Web App</a></td>
